--- a/src/panels/home.html
+++ b/src/panels/home.html
@@ -17,7 +17,7 @@
         <div class="info-list">
             <div class="info-item">
                 <div class="server">
-                    <img class="server-img" src="assets/images/icon.png"/>
+                    <img class="server-img" src="assets/images/LA-ZONE-ULTRA-12-06-2023.gif"/>
                     <div class="server-text">
                         <div class="name">Server titre...</div>
                         <div class="desc"><span class="red">Fermé</span> - 0ms</div>
